tdf#119629 Fix keytime formula and missing effect node type.

1. Don't override keytime formula value if already read.
2. MSO's effect node type Click parallel node, with group node,
after group node were missing, now mapping to ON_CLICK,
WITH_PREVIOUS, AFTER_PREVIOUS correspondingly.

Change-Id: Id81d6c8597f4de58a7face3f013fcd7a36bb0fd9